refacotr : 로고 , 프로필 파일매니저 리팩토링

--- a/src/main/resources/templates/service/search.html
+++ b/src/main/resources/templates/service/search.html
@@ -58,7 +58,7 @@
 
           <div class="col-md-2">
             <a class="card-link"  th:href="${service.serviceUrl}">
-              <img class="img-fluid rounded-start" width="50%" height="100%" th:src='@{/logo/{store} (store=${service.logoStoreName})}' alt="image">
+              <img class="img-fluid rounded-start" width="50%" height="100%" th:src='@{/file/logo/{store} (store=${service.logoStoreName})}' alt="image">
             </a>
           </div>
 
