--- a/src/main/resources/templates/service/service-page.html
+++ b/src/main/resources/templates/service/service-page.html
@@ -54,7 +54,7 @@
             <div class="resume-intro py-3">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-3 col-xl-2 text-center">
-                        <img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto" th:src='@{/logo/{store} (store=${singleServiceWithCommentsDto.logoStoreName})}' alt="image">
+                        <img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto" th:src='@{/file/logo/{store} (store=${singleServiceWithCommentsDto.logoStoreName})}' alt="image">
                     </div>
 
                     <div class="col text-start">
