refactor : 뷰에 호스트 변경지점 모으기

--- a/src/main/resources/templates/client/client-service-edit.html
+++ b/src/main/resources/templates/client/client-service-edit.html
@@ -69,7 +69,7 @@
 
     $.ajax({
       type: 'POST',
-      url:'http://impatient.iptime.org:9090/client/service/delete/' + serviceId,
+      url: domain + '/client/service/delete/' + serviceId,
       beforeSend : function(xhr)
       {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
         xhr.setRequestHeader(header, token);
