--- a/src/main/resources/templates/fragment/library.html
+++ b/src/main/resources/templates/fragment/library.html
@@ -34,6 +34,9 @@
 
     <!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
     <script src="/assets/js/demo/style-switcher.js"></script>
+    <script>
+        domain = "http://impatient.iptime.org:9090"
+    </script>
 </div>
 
 </body>
