--- a/src/main/resources/templates/service/search.html
+++ b/src/main/resources/templates/service/search.html
@@ -101,7 +101,7 @@
 
     $.ajax({
       type: 'POST',
-      url:'http://impatient.iptime.org:9090/client/add-service/' + serviceId,
+      url: domain + '/client/add-service/' + serviceId,
       beforeSend : function(xhr)
       {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
         xhr.setRequestHeader(header, token);
@@ -125,7 +125,7 @@
 
     $.ajax({
       type: 'POST',
-      url:'http://impatient.iptime.org:9090/client/delete-service/' + serviceId,
+      url: domain + '/client/delete-service/' + serviceId,
       beforeSend : function(xhr)
       {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
         xhr.setRequestHeader(header, token);
