--- a/src/main/resources/templates/service/service-page.html
+++ b/src/main/resources/templates/service/service-page.html
@@ -144,7 +144,7 @@
 
         $.ajax({
             type: 'POST',
-            url:'http://impatient.iptime.org:9090/client/add-service/' + serviceId,
+            url:domain + '/client/add-service/' + serviceId,
             beforeSend : function(xhr)
             {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
                 xhr.setRequestHeader(header, token);
@@ -153,7 +153,7 @@
             cache :false, // 캐시 여부
             success: function(data){
                 console.log(data.name);
-                window.location="http://impatient.iptime.org:9090/service/" + serviceId;
+                window.location=domain + "/service/" + serviceId;
             },
             error:function(xhr,status,error){
                 console.log('error:'+error);
@@ -168,7 +168,7 @@
 
         $.ajax({
             type: 'POST',
-            url:'http://impatient.iptime.org:9090/client/delete-service/' + serviceId,
+            url: domain + '/client/delete-service/' + serviceId,
             beforeSend : function(xhr)
             {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
                 xhr.setRequestHeader(header, token);
@@ -177,7 +177,7 @@
             cache :false, // 캐시 여부
             success: function(data){
                 console.log(data.name);
-                window.location="http://impatient.iptime.org:9090/service/" + serviceId;
+                window.location= domain + "/service/" + serviceId;
             },
             error:function(xhr,status,error){
                 console.log('error:'+error);
