--- a/src/main/resources/templates/fragment/toolbar.html
+++ b/src/main/resources/templates/fragment/toolbar.html
@@ -56,7 +56,7 @@
                     cache :false, // 캐시 여부
                     success: function(data){
                         console.log(data.name);
-                        window.location= domain + "/login";
+                        window.location.reload(true);
                     },
                     error:function(xhr,status,error){
                         console.log('error:'+error);
