feat : HTTPS to HTTP 요청헤더 설정

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -15,7 +15,7 @@
         <meta property="og:type" content=" website" />
         <meta property="og:url" content="http://impatient.iptime.org:9090" />
         <meta property="og:image" content="http://impatient.iptime.org:9090/logo/service-hub.png" />
-
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <meta th:name="_csrf" th:content="${_csrf.token}"/>
         <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
 
