--- a/src/main/resources/templates/service/service-edit-page.html
+++ b/src/main/resources/templates/service/service-edit-page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <div th:insert="~{fragment/header :: header}"></div>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.css" rel="stylesheet">
 </head>
