--- a/src/main/resources/templates/fragment/toolbar.html
+++ b/src/main/resources/templates/fragment/toolbar.html
@@ -5,41 +5,30 @@
     <header>
 
     <!-- Topbar -->
-    <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow" style="justify-content: right">
+    <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow justify-content-center">
         <!-- Sidebar Toggle (Topbar) -->
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-        </a>
-
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-
-            <li><a class="btn btn-outline-primary me-2" sec:authorize="hasRole('ADMIN')" th:href="@{/service/registration}">서비스 등록</a></li>
-            <li><a class="btn btn-outline-primary me-2"  th:href="@{/service/search}">서비스 검색</a></li>
-        </ul>
-
-        <div class="text-end">
-            <form
-                    class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                           aria-label="Search" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                        <button class="btn btn-primary" type="button">
-                            <i class="fas fa-search fa-sm"></i>
-                        </button>
-                    </div>
-                </div>
-            </form>
-            <a class="btn btn-outline-primary me-2" sec:authorize="isAnonymous()" th:href="@{/login}">로그인</a>
-            <a class="btn btn-outline-primary me-2" sec:authorize="isAuthenticated()" onclick="logout()"> 로그아웃</a>
-            <a class="btn btn-outline-primary me-2" sec:authorize="isAnonymous()" th:href="@{/signup}">회원가입</a>
-            <img class="img-profile rounded-circle"
-                 style="width: 5%;height: 5%" src="/assets/images/impati.jpeg">
-            <a class="me-5" href="#" id="userDropdown" role="button"  sec:authorize="isAuthenticated()" th:href="@{/client/{clientId} (clientId=${#authentication.getPrincipal().getId()})}" data-toggle="" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-900 " sec:authorize="isAuthenticated()" th:text="${#authentication.name}">Douglas McGee</span>
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
             </a>
 
-        </div>
+
+
+            <div style="text-align: left">
+            <a class="btn btn-outline-primary me-3 w-100" sec:authorize="hasRole('ADMIN')" th:href="@{/service/registration}">서비스등록</a>
+            <a class="btn btn-outline-primary me-3 w-100" th:href="@{/service/search}">서비스검색</a>
+            </div>
+
+            <div style="text-align: right">
+                <a class="btn btn-outline-primary me-2" sec:authorize="isAnonymous()" th:href="@{/login}">로그인</a>
+                <a class="btn btn-outline-primary me-2" sec:authorize="isAuthenticated()" onclick="logout()"> 로그아웃</a>
+                <a class="btn btn-outline-primary me-2" sec:authorize="isAnonymous()" th:href="@{/signup}">회원가입</a>
+                <img class="img-profile rounded-circle"
+                     style="width: 5%;height: 5%" src="/assets/images/impati.jpeg">
+                <a class="me-5" href="#" id="userDropdown" role="button"  sec:authorize="isAuthenticated()" th:href="@{/client/{clientId} (clientId=${#authentication.getPrincipal().getId()})}" data-toggle="" aria-haspopup="true" aria-expanded="false">
+                    <span class="mr-2 d-none d-lg-inline text-gray-900 " sec:authorize="isAuthenticated()" th:text="${#authentication.name}">Douglas McGee</span>
+                </a>
+            </div>
+    </nav>
         <script  type="text/javascript">
             function logout(){
                 var token = $("meta[name='_csrf']").attr("content");
@@ -65,7 +54,7 @@
             }
 
         </script>
-    </nav>
+
 
     </header>
 </div>
