fix : #71 - 서비스 전체 검색 오류 수정

--- a/src/main/resources/templates/service/search.html
+++ b/src/main/resources/templates/service/search.html
@@ -42,8 +42,8 @@
           </div>
           <hr>
           <button type="submit" class="btn btn-primary">검색</button>
-          <div class="text-end"><button class="btn btn-primary" th:onclick="|location.href='@{/search}'|">전체 검색</button></div>
         </form>
+        <div class="text-end"><button class="btn btn-primary" th:onclick="|location.href='@{/service/search}'|">전체 검색</button></div>
       </div><!--//single-form-max-width-->
     </div><!--//container-->
   </section>
