--- a/src/main/resources/templates/client/client-page.html
+++ b/src/main/resources/templates/client/client-page.html
@@ -3,7 +3,11 @@
 <head>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <div th:insert="~{fragment/header :: header}"></div>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
 </head>
+
+
 <body>
 
 <div th:insert="~{fragment/sidebar :: sidebar}"></div>
@@ -11,6 +15,8 @@
 <div class="main-wrapper">
 
     <div th:insert="~{fragment/toolbar :: toolbar}"></div>
+
+
 
     <section class="cta-section theme-bg-light py-5">
         <div class="container single-col-max-width">
@@ -43,7 +49,7 @@
             <div class="project-meta isotope row" style="display: flex; flex-wrap: wrap">
                 <div class="isotope-item col-md-6 mb-5" style="width: 20%;justify-content: center"  th:classappend="${service.getCategories()}" th:each="service : ${serviceWithClick}">
                         <div class="card" style="width: 60%; height: 100%;border: none;justify-content: center">
-                                <a class="card-link" style="display: block;width: 100%" th:href="@{/client/click/(serviceId=${service.serviceId})}">
+                                <a class="card-link" style="display: block;width: 100%" th:href="@{/client/click/(serviceId=${service.serviceId},isCustom=${service.isCustom()})}">
                                     <img style="width: 50px; display: block" th:src="@{/file/logo/{logoStoreName} (logoStoreName=${service.logoStoreName})}" class="card-img" alt="image">
                                 </a>
                                 <a class="tile" th:text="${service.serviceName}"  th:href="@{/service/{serviceId} (serviceId=${service.serviceId})}">
@@ -54,16 +60,87 @@
         </div>
     </section>
 
+
+    <!-- Modal HTML -->
+    <div id="myModal" class="modal">
+        <div class="modal-dialog-centered modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">커스텀 서비스 추가히기</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="customServiceName" class="col-form-label">이름</label>
+                            <input type="text" class="form-control" id="customServiceName" name="customServiceName"  placeholder="serviceName" required="" aria-required="true">
+                        </div>
+                        <div class="mb-3">
+                            <label for="customServiceUrl" class="col-form-label">URL</label>
+                            <input type="url" class="form-control" id="customServiceUrl" name="customServiceUrl" placeholder="URL" required="" aria-required="true" >
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+                    <button type="button" id="ajaxCall" class="btn btn-primary">추가 하기</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <div th:insert="~{fragment/footer :: footer}"></div>
 
 
 </div><!--//main-wrapper-->
 
-<!--Page Specific JS -->
 
+<script>
+    $(document).ready(function() {
+        $("#myModal").modal("show");
+    });
+
+    window.onload = function() {
+        var httpRequest;
+        /* button이 클릭되었을때 이벤트 */
+        document.getElementById("ajaxCall").addEventListener('click', () => {
+
+            var customServiceName = document.getElementById("customServiceName").value;
+            var customServiceUrl = document.getElementById("customServiceUrl").value;
+
+
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+
+
+            $.ajax({
+                type: 'POST',
+                url: domain + '/client/add-custom?serviceName=' + customServiceName + '&serviceUrl=' + customServiceUrl,
+                beforeSend : function(xhr)
+                {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
+                    xhr.setRequestHeader(header, token);
+                },
+                async: false, //동기, 비동기 여부
+                cache :false, // 캐시 여부
+                success: function(data){
+                    console.log(data.name);
+                    window.location=location.href;
+                },
+                error:function(xhr,status,error){
+                    console.log('error:'+error);
+                }
+            });
+        });
+    }
+
+</script>
 <script type="text/javascript" src="/assets/plugins/imagesloaded.pkgd.min.js"></script>
 <script type="text/javascript" src="/assets/plugins/isotope.pkgd.min.js"></script>
 <script type="text/javascript" src="/assets/js/isotope-custom.js"></script>
+
 
 <div th:insert="~{fragment/library :: libraries}"></div>
 
