--- a/src/main/resources/templates/client/client-service-edit.html
+++ b/src/main/resources/templates/client/client-service-edit.html
@@ -43,7 +43,7 @@
       <div class="project-meta isotope row" style="display: flex; flex-wrap: wrap">
         <div class="isotope-item col-md-6 mb-5" style="width: 20%;justify-content: center"  th:classappend="${service.getCategories()}" th:each="service : ${serviceWithClick}">
           <div class="card" style="width: 60%; height: 100%;border: none;justify-content: center">
-            <button th:onclick="|deleteAction('${service.serviceId}')|" style="width: 50%" class="btn btn-outline-danger">-</button>
+            <button th:onclick="|deleteAction('${service.serviceId}' ,'${service.isCustom}')|" style="width: 50%" class="btn btn-outline-danger">-</button>
             <a class="card-link" style="display: block;width: 100%" th:href="@{/client/click/(serviceId=${service.serviceId})}">
               <img style="width: 50px; display: block" th:src="@{/file/logo/{logoStoreName} (logoStoreName=${service.logoStoreName})}" class="card-img" alt="image">
             </a>
@@ -63,14 +63,14 @@
 <!--Page Specific JS -->
 <script type="text/javascript">
 
-  function deleteAction(serviceId){
+  function deleteAction(serviceId,custom){
 
     var token = $("meta[name='_csrf']").attr("content");
     var header = $("meta[name='_csrf_header']").attr("content");
 
     $.ajax({
       type: 'POST',
-      url: domain + '/client/service/delete/' + serviceId,
+      url: domain + '/client/service/delete/' + serviceId + "?isCustom=" + custom,
       beforeSend : function(xhr)
       {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
         xhr.setRequestHeader(header, token);
