--- a/src/main/resources/templates/client/client-page.html
+++ b/src/main/resources/templates/client/client-page.html
@@ -47,14 +47,15 @@
             </div>
 
             <div class="project-meta isotope row" style="display: flex; flex-wrap: wrap">
-                <div class="isotope-item col-md-6 mb-5" style="width: 20%;justify-content: center"  th:classappend="${service.getCategories()}" th:each="service : ${serviceWithClick}">
+                <div class="isotope-item col-md-6 mb-5" style="width: 10%;justify-content: center"  th:classappend="${service.getCategories()}" th:each="service : ${serviceWithClick}">
                         <div class="card" style="width: 60%; height: 100%;border: none;justify-content: center">
-                                <a class="card-link" style="display: block;width: 100%" th:href="@{/client/click/(serviceId=${service.serviceId},isCustom=${service.isCustom()})}">
+                                <a class="card-link" style="display: block" th:href="@{/client/click/(serviceId=${service.serviceId},isCustom=${service.isCustom()})}">
                                     <img style="width: 50px; display: block" th:src="@{/file/logo/{logoStoreName} (logoStoreName=${service.logoStoreName})}" class="card-img" alt="image">
                                 </a>
-                                <a class="tile" th:text="${service.serviceName}">
-                                </a>
-                        </div><!--//card-->
+                        </div>
+                         <a class="tile" th:text="${service.serviceName}">
+                        </a>
+                    <!--//card-->
                 </div>
             </div><!--//row-->
         </div>
