--- a/src/main/resources/templates/fragment/toolbar.html
+++ b/src/main/resources/templates/fragment/toolbar.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5" xmlns:th="http://www.thymeleaf.org">
 <body>
 <div th:fragment="toolbar">
     <header>
 
-    <!-- Topbar -->
-    <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow justify-content-center">
-        <!-- Sidebar Toggle (Topbar) -->
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
+        <!-- Topbar -->
+        <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow justify-content-center">
+            <!-- Sidebar Toggle (Topbar) -->
+            <a class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none" href="/">
+                <svg aria-label="Bootstrap" class="bi me-2" height="32" role="img" width="40">
+                    <use xlink:href="#bootstrap"/>
+                </svg>
             </a>
 
             <div style="text-align: left">
-            <a class="btn btn-outline-primary me-2 w-100" sec:authorize="hasRole('ADMIN')" th:href="@{/service/registration}">서비스등록</a>
+                <a class="btn btn-outline-primary me-2 w-100" sec:authorize="hasRole('ADMIN')"
+                   th:href="@{/service/registration}">서비스등록</a>
             </div>
 
             <div style="text-align: left">
@@ -20,36 +23,39 @@
             </div>
 
             <div style="text-align: right">
-                <a class="btn btn-outline-primary me-2" sec:authorize="isAnonymous()" th:href="@{/login}">로그인</a>
-                <a class="btn btn-outline-primary me-2" sec:authorize="isAuthenticated()" onclick="logout()"> 로그아웃</a>
+                <a class="btn btn-outline-primary me-2" sec:authorize="isAnonymous()"
+                   th:href="@{/customer-server/authorization}">로그인</a>
+                <a class="btn btn-outline-primary me-2" onclick="logout()" sec:authorize="isAuthenticated()"> 로그아웃</a>
                 <a class="btn btn-outline-primary me-2" sec:authorize="isAnonymous()" th:href="@{/signup}">회원가입</a>
                 <img class="img-profile rounded-circle"
-                     style="width: 5%;height: 5%" src="/assets/images/impati.jpeg">
-                <a class="me-5" href="#" id="userDropdown" role="button"  sec:authorize="isAuthenticated()" th:href="@{/client/{clientId} (clientId=${#authentication.getPrincipal().getId()})}" data-toggle="" aria-haspopup="true" aria-expanded="false">
-                    <span class="mr-2 d-none d-lg-inline text-gray-900 " sec:authorize="isAuthenticated()" th:text="${#authentication.name}">Douglas McGee</span>
+                     src="/assets/images/impati.jpeg" style="width: 5%;height: 5%">
+                <a aria-expanded="false" aria-haspopup="true" class="me-5" data-toggle="" href="#"
+                   id="userDropdown" role="button"
+                   sec:authorize="isAuthenticated()" th:href="@{/client/{clientId} (clientId=${#authentication.getPrincipal().getId()})}">
+                    <span class="mr-2 d-none d-lg-inline text-gray-900 " sec:authorize="isAuthenticated()"
+                          th:text="${#authentication.name}">Douglas McGee</span>
                 </a>
             </div>
-    </nav>
+        </nav>
         <script type="text/javascript">
-            function logout(){
+            function logout() {
                 var token = $("meta[name='_csrf']").attr("content");
                 var header = $("meta[name='_csrf_header']").attr("content");
 
                 $.ajax({
                     type: 'POST',
                     url: domain + '/logout',
-                    beforeSend : function(xhr)
-                    {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
+                    beforeSend: function (xhr) {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
                         xhr.setRequestHeader(header, token);
                     },
                     async: false, //동기, 비동기 여부
-                    cache :false, // 캐시 여부
-                    success: function(data){
+                    cache: false, // 캐시 여부
+                    success: function (data) {
                         console.log(data.name);
                         window.location.reload(true);
                     },
-                    error:function(xhr,status,error){
-                        console.log('error:'+error);
+                    error: function (xhr, status, error) {
+                        console.log('error:' + error);
                     }
                 });
             }
