--- a/src/main/resources/templates/client/client-edit-page.html
+++ b/src/main/resources/templates/client/client-edit-page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <div th:insert="~{fragment/header :: header}"></div>
-
 </head>
 
 <style>
@@ -28,41 +28,47 @@
     <section class="contact-section px-3 py-5 p-md-5">
 
         <div class="container">
-            <form th:object="${clientEditForm}" id="contact-form" class="contact-form col-lg-8 mx-lg-auto"  name="register" th:action method="post" enctype="multipart/form-data">
+            <form class="contact-form col-lg-8 mx-lg-auto" enctype="multipart/form-data" id="contact-form"
+                  method="post" name="register" th:action th:object="${clientEditForm}">
 
                 <div class="row g-3">
 
 
-
                     <div class="col-12 col-md-6">
                         <label class="sr-only" for="profile">profile</label>
-                        <input type="file" class="form-control" id="profile" th:field="*{profileImage}" minlength="2">
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>프로필 이미지를 등록하세요!</small>
+                        <input class="form-control" id="profile" minlength="2" th:field="*{profileImage}" type="file">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>프로필
+                            이미지를 등록하세요!</small>
                         <small class="field-error" th:errors="*{profileImage}"></small>
                     </div>
 
 
-
                     <div class="col-12">
                         <label class="sr-only" for="nick">nickname</label>
-                        <input type="text" class="form-control" id="nick" th:field="*{nickname}" >
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>닉네임을 설정해주세요</small>
+                        <input class="form-control" id="nick" th:field="*{nickname}" type="text">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>닉네임을
+                            설정해주세요</small>
                         <small class="field-error" th:errors="*{nickname}"></small>
                     </div>
 
 
                     <div class="col-12 markdown-body">
                         <label class="sr-only" for="intro">introComment</label>
-                        <input type="text" class="form-control" id="intro"  placeholder="explain About you ... " th:field="*{introComment}">
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>자신을 소개해주세요 ... </small>
+                        <input class="form-control" id="intro" placeholder="explain About you ... "
+                               th:field="*{introComment}"
+                               type="text">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>자신을
+                            소개해주세요 ... </small>
                         <small class="field-error" th:errors="*{introComment}"></small>
                     </div>
 
 
                     <div class="col-12">
                         <label class="sr-only" for="blog">blog link</label>
-                        <input type="url" class="form-control" id="blog"  placeholder="register blog link" th:field="*{blogUri}" >
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>Blog URL를 입력해주세요</small>
+                        <input class="form-control" id="blog" placeholder="register blog link" th:field="*{blogUri}"
+                               type="url">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>Blog
+                            URL를 입력해주세요</small>
                         <small class="field-error" th:errors="*{blogUri}"></small>
                     </div>
 
@@ -70,7 +76,7 @@
                     <br>
 
                     <div class="form-group col-12">
-                        <button type="submit"  class="btn btn-block btn-primary py-2">등록</button>
+                        <button class="btn btn-block btn-primary py-2" type="submit">등록</button>
                     </div>
 
                 </div><!--//form-row-->
