--- a/src/main/resources/templates/client/client-service-edit.html
+++ b/src/main/resources/templates/client/client-service-edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta content="upgrade-insecure-requests" http-equiv="Content-Security-Policy">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <div th:insert="~{fragment/header :: header}"></div>
 </head>
 <body>
