--- a/src/main/resources/templates/fragment/library.html
+++ b/src/main/resources/templates/fragment/library.html
@@ -3,11 +3,12 @@
 <body>
 <div th:fragment="libraries">
     <!-- *****CONFIGURE STYLE (REMOVE ON YOUR PRODUCTION SITE)****** -->
-    <div id="config-panel" class="config-panel config-panel-hide d-none d-lg-block">
+    <div class="config-panel config-panel-hide d-none d-lg-block" id="config-panel">
         <div class="panel-inner">
-            <a id="config-trigger" class="config-trigger text-center" href="#"><i class="fas fa-cog mx-auto" data-fa-transform="down-6" ></i></a>
+            <a class="config-trigger text-center" href="#" id="config-trigger"><i class="fas fa-cog mx-auto"
+                                                                                  data-fa-transform="down-6"></i></a>
             <h5 class="panel-title">Choose Colour</h5>
-            <ul id="color-options" class="list-inline mb-0">
+            <ul class="list-inline mb-0" id="color-options">
                 <li class="theme-1 active list-inline-item"><a data-style="/assets/css/theme-1.css" href="#"></a></li>
                 <li class="theme-2  list-inline-item"><a data-style="/assets/css/theme-2.css" href="#"></a></li>
                 <li class="theme-3  list-inline-item"><a data-style="/assets/css/theme-3.css" href="#"></a></li>
@@ -19,7 +20,7 @@
                 <li class="theme-9  list-inline-item"><a data-style="/assets/css/theme-9.css" href="#"></a></li>
                 <li class="theme-10  list-inline-item"><a data-style="/assets/css/theme-10.css" href="#"></a></li>
             </ul>
-            <a id="config-close" class="close" href="#"><i class="fa fa-times-circle"></i></a>
+            <a class="close" href="#" id="config-close"><i class="fa fa-times-circle"></i></a>
         </div><!--//panel-inner-->
     </div><!--//configure-panel-->
 
@@ -35,7 +36,7 @@
     <!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
     <script src="/assets/js/demo/style-switcher.js"></script>
     <script>
-        domain = "http://impatient.iptime.org:9090"
+        domain = "http://impatient.iptime.org:8079"
     </script>
 </div>
 
