--- a/src/main/resources/templates/customer/customer-edit-page.html
+++ b/src/main/resources/templates/customer/customer-edit-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta content="upgrade-insecure-requests" http-equiv="Content-Security-Policy">
     <div th:insert="~{fragment/header :: header}"></div>
 </head>
 
@@ -29,7 +29,7 @@
 
         <div class="container">
             <form class="contact-form col-lg-8 mx-lg-auto" enctype="multipart/form-data" id="contact-form"
-                  method="post" name="register" th:action th:object="${clientEditForm}">
+                  method="post" name="register" th:action th:object="${customerEditForm}">
 
                 <div class="row g-3">
 
@@ -65,11 +65,11 @@
 
                     <div class="col-12">
                         <label class="sr-only" for="blog">blog link</label>
-                        <input class="form-control" id="blog" placeholder="register blog link" th:field="*{blogUri}"
+                        <input class="form-control" id="blog" placeholder="register blog link" th:field="*{blogUrl}"
                                type="url">
                         <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>Blog
                             URL를 입력해주세요</small>
-                        <small class="field-error" th:errors="*{blogUri}"></small>
+                        <small class="field-error" th:errors="*{blogUrl}"></small>
                     </div>
 
                     <hr>
