--- a/src/main/resources/templates/fragment/sidebar.html
+++ b/src/main/resources/templates/fragment/sidebar.html
@@ -4,45 +4,55 @@
 <header class="header text-center" th:fragment="sidebar">
 
     <div class="force-overflow">
-        <h1 class="blog-name pt-lg-4 mb-0"><a class="no-text-decoration" href="index.html" th:text="${simpleClient.nickname}">SERVICE HUB</a></h1>
+        <h1 class="blog-name pt-lg-4 mb-0"><a class="no-text-decoration" href="index.html"
+                                              th:text="${simpleClient.nickname}">SERVICE HUB</a></h1>
 
-        <nav class="navbar navbar-expand-lg navbar-dark" >
+        <nav class="navbar navbar-expand-lg navbar-dark">
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+            <button aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+                    data-bs-target="#navigation" data-bs-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div id="navigation" class="collapse navbar-collapse flex-column" >
+            <div class="collapse navbar-collapse flex-column" id="navigation">
                 <div class="profile-section pt-3 pt-lg-0">
-                    <img class="profile-image mb-3 rounded-circle mx-auto" th:src="${simpleClient.profileUrl}" alt="image" >
-                    <div class="bio mb-3" th:text="${simpleClient.introComment}">Hi, my name is jun young . Welcome to my personal website!</div><!--//bio-->
+                    <img alt="image" class="profile-image mb-3 rounded-circle mx-auto"
+                         th:src="${simpleClient.profileUrl}">
+                    <div class="bio mb-3" th:text="${simpleClient.introComment}">Hi, my name is jun young . Welcome to
+                        my personal website!
+                    </div><!--//bio-->
                     <hr>
                 </div><!--//profile-section-->
 
                 <ul class="navbar-nav flex-column text-start">
 
                     <li class="nav-item">
-                        <a class="nav-link" th:if="${#authentication.getPrincipal().getId() == simpleClient.clientId}"  th:href="@{/client/edit}"><i class="fas fa-calculator fa-fw me-2"></i>프로필 수정</a>
+                        <a class="nav-link" th:href="@{/customer/edit}"
+                           th:if="${#authentication.getPrincipal().getId() == simpleClient.clientId}"><i class="fas fa-calculator fa-fw me-2"></i>프로필 수정</a>
                     </li>
 
                     <hr>
 
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/service/search}"><i class="fas fa-laptop-code fa-fw me-2"></i>서비스 검색</a>
+                        <a class="nav-link" th:href="@{/service/search}"><i class="fas fa-laptop-code fa-fw me-2"></i>서비스
+                            검색</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" th:if="${#authentication.getPrincipal().getId() == simpleClient.clientId}" th:href="@{/client/service/edit}"><i class="fas fa-laptop-code fa-fw me-2"></i>내서비스 수정</a>
+                        <a class="nav-link" th:href="@{/customer/service/edit}"
+                           th:if="${#authentication.getPrincipal().getId() == simpleClient.clientId}"><i class="fas fa-laptop-code fa-fw me-2"></i>내서비스 수정</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="#myModal" class="nav-link" data-bs-toggle="modal"><i class="fas fa-laptop-code fa-fw me-2"></i>커스텀 서비스 추가</a>
+                        <a class="nav-link" data-bs-toggle="modal" href="#myModal"><i
+                                class="fas fa-laptop-code fa-fw me-2"></i>커스텀 서비스 추가</a>
                     </li>
 
                 </ul>
 
                 <div class="my-2">
-                    <a class="btn btn-primary" th:href="${simpleClient.blogUrl}" target="_blank"><i class="fas fa-paper-plane me-2"></i>MY BLOG</a>
+                    <a class="btn btn-primary" target="_blank" th:href="${simpleClient.blogUrl}"><i
+                            class="fas fa-paper-plane me-2"></i>MY BLOG</a>
                 </div>
 
 
