--- a/src/main/resources/templates/fragment/toolbar.html
+++ b/src/main/resources/templates/fragment/toolbar.html
@@ -34,7 +34,7 @@
                 <a aria-expanded="false" aria-haspopup="true" class="me-5" data-toggle="" href="#"
                    id="userDropdown" role="button"
                    sec:authorize="isAuthenticated()"
-                   th:href="@{/client/{clientId} (clientId=${#authentication.getPrincipal().getId()})}">
+                   th:href="@{/customer/{customerId} (customerId=${#authentication.getPrincipal().getId()})}">
                     <span class="mr-2 d-none d-lg-inline text-gray-900 " sec:authorize="isAuthenticated()"
                           th:text="${#authentication.name}">Douglas McGee</span>
                 </a>
