--- a/src/main/resources/templates/service/service-update.html
+++ b/src/main/resources/templates/service/service-update.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta content="upgrade-insecure-requests" http-equiv="Content-Security-Policy">
     <div th:insert="~{fragment/header :: header}"></div>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
