--- a/src/main/resources/templates/customer/customer-edit-page.html
+++ b/src/main/resources/templates/customer/customer-edit-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta content="upgrade-insecure-requests" http-equiv="Content-Security-Policy">
+    <!-- <meta content="upgrade-insecure-requests" http-equiv="Content-Security-Policy"> -->
     <div th:insert="~{fragment/header :: header}"></div>
 </head>
 
