--- a/src/main/resources/templates/service/service-edit-page.html
+++ b/src/main/resources/templates/service/service-edit-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <!-- <meta content="upgrade-insecure-requests" http-equiv="Content-Security-Policy"> -->
   <div th:insert="~{fragment/header :: header}"></div>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.css" rel="stylesheet">
 </head>
@@ -107,7 +107,7 @@
         <div class="mb-1">
           <form th:action="@{/comments/edit}" method="post" th:object="${serviceCommentUpdateForm}">
             <input type="hidden" id="serviceId" th:value="${singleServiceWithCommentsDto.serviceId}" name="serviceId">
-            <input type="hidden" name="clientId" th:value="${#authentication.principal.id}">
+            <input type="hidden" name="customerId" th:value="${#authentication.principal.id}">
             <input type="hidden" id="commentId" th:value="*{commentId}" name="commentId">
             <input type="text" class="form-control" name="content"  th:value="${commentContent}" id="content" rows="1">
             <small class="field-error" th:field="*{content}"></small>
