--- a/src/main/resources/templates/service/service-page.html
+++ b/src/main/resources/templates/service/service-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <!-- <meta content="upgrade-insecure-requests" http-equiv="Content-Security-Policy"> -->
     <div th:insert="~{fragment/header :: header}"></div>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.css" rel="stylesheet">
 </head>
@@ -103,8 +103,8 @@
                         <div class="meta" style="text-align: right">
                             <div class="name"th:text="${comment.nickname}">James Lee</div>
                             <div class="info"th:text="${comment.createAt}">James Lee</div>
-                            <span><a class="text-link"  sec:authorize="isAuthenticated()" th:if="${#authentication.principal.id == comment.clientId}" th:href="@{/comments/edit (serviceId = ${singleServiceWithCommentsDto.serviceId},commentId=${comment.commentId})}">수정</a></span>
-                            <span><a class="text-link"  sec:authorize="isAuthenticated()" th:if="${#authentication.principal.id == comment.clientId}" th:onclick="|deleteComment('${singleServiceWithCommentsDto.serviceId}','${comment.commentId}')|" >삭제</a></span>
+                            <span><a class="text-link"  sec:authorize="isAuthenticated()" th:if="${#authentication.principal.id == comment.customerId}" th:href="@{/comments/edit (serviceId = ${singleServiceWithCommentsDto.serviceId},commentId=${comment.commentId})}">수정</a></span>
+                            <span><a class="text-link"  sec:authorize="isAuthenticated()" th:if="${#authentication.principal.id == comment.customerId}" th:onclick="|deleteComment('${singleServiceWithCommentsDto.serviceId}','${comment.commentId}')|" >삭제</a></span>
                         </div>
                     </div>
                     <br>
@@ -114,7 +114,7 @@
                 <div class="mb-1">
                     <form th:action="@{/comments}" method="post" th:object="${serviceCommentForm}">
                         <input type="hidden" id="serviceId" th:value="${singleServiceWithCommentsDto.serviceId}" name="serviceId">
-                        <input type="hidden" name="clientId" sec:authorize="isAuthenticated()"th:value="${#authentication.principal.id}">
+                        <input type="hidden" name="customerId" sec:authorize="isAuthenticated()"th:value="${#authentication.principal.id}">
                         <input type="hidden" name="nickname" sec:authorize="isAuthenticated()"th:value="${#authentication.principal.nickname}">
                         <textarea class="form-control" name="content"  id="exampleFormControlTextarea1" placeholder="comments..." rows="1"></textarea>
                         <small class="field-error" th:if="${#request.getParameter('hasError')}" th:text="${#request.getParameter('contentError')}"></small>
