fix : 다른 사용자 customer 페이지 조회 기능 철회(#113)

--- a/src/main/resources/templates/customer/customer-page.html
+++ b/src/main/resources/templates/customer/customer-page.html
@@ -34,7 +34,7 @@
                 </form>
                 <div class="text-end">
                     <button class="btn btn-primary"
-                            th:onclick="|location.href='@{/customer/{customerId} (customerId=${simpleCustomer.customerId})}'|">
+                            th:onclick="|location.href='@{/customer}'|">
                         전체
                         검색
                     </button>
