fix : 다른 사용자 페이지 조회 기능 철회 뷰 대응(#113)

--- a/src/main/resources/templates/customer/customer-service-edit.html
+++ b/src/main/resources/templates/customer/customer-service-edit.html
@@ -71,7 +71,7 @@
     </section>
     <div class="text-center">
         <button class="btn btn-primary"
-                th:onclick="|location.href='@{/customer/{customerId} (customerId=${#authentication.getPrincipal().getId()}) }'|">
+                th:onclick="|location.href='@{/customer}'|">
             완료
         </button>
     </div>
