--- a/src/main/resources/templates/fragment/library.html
+++ b/src/main/resources/templates/fragment/library.html
@@ -36,7 +36,7 @@
     <!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
     <script src="/assets/js/demo/style-switcher.js"></script>
     <script>
-        domain = "http://impatient.iptime.org:8079"
+        domain = "https://service-hub.org"
     </script>
 </div>
 
